--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -92,4 +92,7 @@ http {
     
     # Include other server configs
     include /etc/nginx/conf.d/*.conf;
+    
+    fastcgi_buffers 16 16k; 
+    fastcgi_buffer_size 32k;
 }
